--- a/jfx-04-accounting/.classpath
+++ b/jfx-04-accounting/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="mariadb-java-client-2.5.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MariaDB"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/commons-fx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
